--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -27,11 +27,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Tests
-        run: |
-          cd api
-          # Replace this with your testing command, e.g., `pytest`
-          pytest
+      # Commented out Run Tests step, as there are no tests currently
+      # - name: Run Tests
+      #   run: |
+      #     cd api
+      #     pytest
 
       - name: Build and Deploy
         if: success()  # Only run this step if previous steps were successful
