--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -8,9 +8,10 @@ on:
     branches:
       - master
       - feature/api-setup
+      - feature/docker-files
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -45,7 +46,7 @@ jobs:
           context: ./api
           file: ./api/Dockerfile
           push: true
-          tags: your-dockerhub-username/api:latest
+          tags: your-dockerhub-username/qr-code-api:latest
 
       # Build and push Frontend image
       - name: Build and push Frontend Docker image
@@ -54,4 +55,4 @@ jobs:
           context: ./frontend
           file: ./frontend/Dockerfile
           push: true
-          tags: your-dockerhub-username/frontend:latest
+          tags: your-dockerhub-username/qr-code-frontend:latest
