--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Build and push Frontend Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./frontend
-          file: ./frontend/Dockerfile
+          context: ./front-end-nextjs
+          file: ./front-end-nextjs/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/qr-code-frontend:latest
